syntax = "proto3";
package certusone.wormholechain.wormhole;

option go_package = "github.com/wormhole-foundation/wormhole-chain/x/wormhole/types";

message GuardianValidator {
  bytes guardianKey = 1;
  bytes validatorAddr = 2;
  
}

